--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextpage",
+  "name": "@myandrienko/nextpage",
   "version": "1.0.0",
   "description": "Project scratchpad",
   "bin": {
