--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "Project scratchpad",
   "bin": {
-    "nextpage": "src/index.mjs"
+    "nextpage": "src/index.mts"
   },
   "files": [
     "src"
@@ -11,5 +11,15 @@
   "type": "module",
   "author": "Matvei Andrienko",
   "license": "MIT",
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad",
+  "scripts": {
+    "build": "rm -rf dist && tsc"
+  },
+  "devDependencies": {
+    "@types/node": "^22.16.5",
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "human-id": "^4.1.1"
+  }
 }
