--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@myandrienko/nextpage",
-  "version": "2.0.0",
+  "version": "2.0.3",
   "description": "Project scratchpad",
   "bin": {
-    "nextpage": "src/index.mts"
+    "nextpage": "dist/index.mjs"
   },
   "files": [
-    "src"
+    "dist",
+    "examples/default"
   ],
   "type": "module",
   "author": "Matvei Andrienko",
